--- a/helm/argo-cd/values.yaml
+++ b/helm/argo-cd/values.yaml
@@ -44,8 +44,8 @@ argo-cd:
     service:
       namedTargetPort: false
       type: NodePort
-      annotations:
-        beta.cloud.google.com/backend-config: '{"default": "default-config"}'
+      # annotations:
+      #   beta.cloud.google.com/backend-config: '{"default": "default-config"}'
     ingress:
       enabled: false
 
