--- a/apis/dev/spec.yaml
+++ b/apis/dev/spec.yaml
@@ -1,8 +1,9 @@
 swagger: '2.0'
 info:
-  title: Terraform Registry Service API
+  title: DevOpsUI API
   version: '1.1.0'
-  description: terraform registry service apis
+  description: DevOpsUI Builder and Registry Service APIs
+host: api-0pakamc9sgnd9.apigateway.simplycubed-builder-dev.cloud.goog
 paths:
   /healthz:
     get:
